--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "java.project.outputPath": "bin"
+  "java.project.outputPath": "bin",
+  "java.project.sourcePaths": [
+    "."
+  ],
+  "java.project.referencedLibraries": []
 }
